# numeromancy

./: .gitignore  .gitmodules  Dockerfile  README  compose.yaml  lspconfig.lua  pyproject.toml  requirements.txt
demystify/: card.py  data.py  data_visitor.py  demystify.py  mtg_types.py  parse.py  parsed_card.py  test.py  types.py  visitor.py
demystify/card/: __init__.py  data.py  names.py  preprocessing.py
demystify/grammar/: Demystify.g  Demystify.g4  Symbols.g4  Words.g  Words.g4  cardTypes.g4  costs.g4  counters.g  counters.g4  duration.g  duration.g4  effects.g  effects.g4  events.g4  keywordAbilities.g4  keywords.g4  macro.g4  math.g4  misc.g  misc.g4  objects.g4  players.g  players.g4  properties.g  properties.g4  raw_keywords.g4  subsets.g  subsets.g4  zones.g4
demystify/tests/: effects.txt
numeromancy/: card_embedding.py  card_texts.csv  card_vector.py  choose_deck.py  cost_model.py  data.py  deck_data.py  deck_generator.py  deckcheck.py  deckgen.py  demystify.py  embedding.py  eval.py  keyword_ability.py  mtg.model  mtg_types.py  out.txt  parse_decklist.py  parsing.py  preprocessing.py  sets.py  synergy_model.py  train_synergy.py  util.py  web_gui.py  words.py
numeromancy/card/: card.py  card_face.py  cmc.py  data.py  names.py  preprocessing.py  util.py
numeromancy/cost_model/: card_vector.py  synergy_model.py  text_model.py
numeromancy/format/: __init__.py  banlist.py  banlist_timeline.py  format.py  set_timeline.py  sets.py  standard.py
numeromancy/grammar/: counters.g4  math.g4  misc.g4  (+1 more)
src/: preprocessing.py  test.py  text_vector.py
(+14 files in other folders)
