[project]
name = "numeromancy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.3",
    "nbne",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "progressbar2>=4.5.0",
    "scikit-learn>=1.7.1",
    "streamlit>=1.49.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.0",
]

[tool.uv.workspace]
members = [
    "nbne",
]

[tool.uv.sources]
nbne = { workspace = true }
